[package]
name = "imgui-glfw-rs"
version = "0.12.0"
authors = ["K4ugummi <stephan.schauerte@gmail.com>"]
description = "ImGui input handling for GLFW"
homepage = "https://github.com/K4ugummi/imgui-glfw-rs"
repository = "https://github.com/K4ugummi/imgui-glfw-rs"
readme = "README.md"
categories = ["gui"]
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]

glfw = "0.59.0"
gl = "0.14.0"
imgui = "0.12.0"
imgui-opengl-renderer-rs = "0.12.0"

[dev-dependencies]
